--- a/Irydae/Ressources/StyleDictionary.xaml
+++ b/Irydae/Ressources/StyleDictionary.xaml
@@ -66,7 +66,14 @@
         <Setter Property="Height" Value="24"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
-    
+
+    <Style x:Key="{x:Type xctk:IntegerUpDown}" TargetType="{x:Type xctk:IntegerUpDown}">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Width" Value="150"/>
+        <Setter Property="Height" Value="24"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+
     <Style x:Key="DefaultMenuItem" TargetType="{x:Type MenuItem}">
         <Setter Property="IsCheckable" Value="False"/>
     </Style>
