--- a/Irydae/Views/AddPeriodeDialog.xaml
+++ b/Irydae/Views/AddPeriodeDialog.xaml
@@ -26,15 +26,15 @@
                 <Label HorizontalContentAlignment="Right" Content="Date de fin : "/>
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center">
-                <TextBox Name="LieuInput" />
+                <TextBox Name="LieuInput" TextChanged="LieuInput_TextChanged" />
                 <DatePicker Name="StartDatePicker" DisplayDate="1/1/933" />
                 <DatePicker Name="EndDatePicker" DisplayDate="1/1/933"/>
             </StackPanel>
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal">
                 <Button Name="CancelButton" IsCancel="True">Annuler</Button>
-                <Button Name="AddAnotherButton" Click="AddAndContinue">Ajouter un autre</Button>
-                <Button Name="AddAndAddRp" Click="AddAndOpenRpDialog">Ajouter et créer un Rp</Button>
-                <Button Name="AddButton" IsDefault="True" Click="AddAndClose">OK</Button>
+                <Button Name="AddAnotherButton" IsEnabled="False" Click="AddAndContinue">Ajouter un autre</Button>
+                <Button Name="AddAndAddRp" IsEnabled="False" Click="AddAndOpenRpDialog">Ajouter et créer un Rp</Button>
+                <Button Name="AddButton" IsEnabled="False" IsDefault="True" Click="AddAndClose">OK</Button>
             </StackPanel>
         </Grid>
     </Border>
