--- a/Irydae/Views/AddPeriodeDialog.xaml
+++ b/Irydae/Views/AddPeriodeDialog.xaml
@@ -27,7 +27,7 @@
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center">
                 <TextBox Name="LieuInput" TextChanged="LieuInput_TextChanged" />
-                <DatePicker Name="StartDatePicker" DisplayDate="1/1/933" />
+                <DatePicker Name="StartDatePicker" SelectedDateChanged="LieuInput_TextChanged" DisplayDate="1/1/933" />
                 <DatePicker Name="EndDatePicker" DisplayDate="1/1/933"/>
             </StackPanel>
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal">
