--- a/Irydae/Views/AddPeriodeDialog.xaml
+++ b/Irydae/Views/AddPeriodeDialog.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="Irydae.Views.AddPeriodeDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit"
         Title="Ajouter une période"
         Height="190"
         MinHeight="10"
@@ -26,7 +27,13 @@
                 <Label HorizontalContentAlignment="Right" Content="Date de fin : "/>
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center">
-                <TextBox Name="LieuInput" TextChanged="LieuInput_TextChanged" />
+                <controls:AutoCompleteBox Name="LieuInput" ItemsSource="{Binding Positions}" TextChanged="LieuInput_TextChanged" ValueMemberPath="Key" >
+                    <controls:AutoCompleteBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Key}"/>
+                        </DataTemplate>
+                    </controls:AutoCompleteBox.ItemTemplate>
+                    </controls:AutoCompleteBox>
                 <DatePicker Name="StartDatePicker" SelectedDateChanged="LieuInput_TextChanged" DisplayDate="1/1/933" />
                 <DatePicker Name="EndDatePicker" DisplayDate="1/1/933"/>
             </StackPanel>
