--- a/Irydae/Views/AddRpDialog.xaml
+++ b/Irydae/Views/AddRpDialog.xaml
@@ -1,6 +1,8 @@
 ﻿<Window x:Class="Irydae.Views.AddRpDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:ressources="clr-namespace:Irydae.Ressources"
+        xmlns:helpers="clr-namespace:Irydae.Helpers"
         Title="Ajouter un Rp"
         Height="190"
         MinHeight="10"
@@ -8,7 +10,11 @@
         ShowInTaskbar="False"
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner" 
-        FocusManager.FocusedElement="{Binding ElementName=NameInput}">
+        FocusManager.FocusedElement="{Binding ElementName=TitreInput}">
+    <Window.Resources>
+        <helpers:BindingProxy x:Key="ProxyElement" Data="{Binding}" />
+        <ressources:AmbientValueConverter x:Key="AmbientValueConverter" NullLabel="Did you just assume my type ?"/>
+    </Window.Resources>
     <Border Padding="10">
         <Grid>
             <Grid.RowDefinitions>
@@ -22,10 +28,24 @@
             <StackPanel Orientation="Vertical">
                 <Label HorizontalContentAlignment="Right" Content="Titre * : "/>
                 <Label HorizontalContentAlignment="Right" Content="Url * : "/>
+                <Label HorizontalContentAlignment="Right" Content="Type : "/>
             </StackPanel>
             <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
                 <TextBox TextChanged="TitreInput_TextChanged" Name="TitreInput"/>
                 <TextBox TextChanged="TitreInput_TextChanged" Name="UrlInput"/>
+                <ComboBox Name="TypeComboBox" SelectionChanged="TypeComboBox_OnSelectionChanged">
+                    <ComboBox.ItemsSource>
+                        <CompositeCollection>
+                            <ComboBoxItem Foreground="Black">Did you just assume my type ?</ComboBoxItem>
+                            <CollectionContainer Collection="{Binding Data.RpTypes, Source={StaticResource ProxyElement}}"/>
+                        </CompositeCollection>
+                    </ComboBox.ItemsSource>
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=., Converter={StaticResource AmbientValueConverter}}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
             </StackPanel>
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal">
                 <Button Click="Cancel" Name="CancelButton" IsCancel="True">Annuler</Button>
