--- a/Irydae/Views/AddRpDialog.xaml
+++ b/Irydae/Views/AddRpDialog.xaml
@@ -42,7 +42,9 @@
                     </ComboBox.ItemsSource>
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=., Converter={StaticResource AmbientValueConverter}}"/>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding Path=., Converter={StaticResource AmbientValueConverter}}"/>
+                            </StackPanel>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
