--- a/Irydae/Views/PeriodeUserControl.xaml
+++ b/Irydae/Views/PeriodeUserControl.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:system="clr-namespace:System;assembly=mscorlib"
+             xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit"
+             xmlns:viewModels="clr-namespace:Irydae.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <GroupBox Margin="5" Padding="5">
@@ -29,7 +30,14 @@
                 <Label HorizontalContentAlignment="Right" Content="Date de fin : "/>
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0">
-                <TextBox Name="LieuInput" Text="{Binding Lieu}"/>
+                <!--<TextBox Name="LieuInput" Text="{Binding Lieu}"/>-->
+                <controls:AutoCompleteBox Name="LieuInput" SelectedItem="{Binding Lieu}" ItemsSource="{Binding Source={x:Static viewModels:PersonnageInfoViewModel.PositionsNames}}" ValueMemberPath="Key">
+                    <controls:AutoCompleteBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Key}"/>
+                        </DataTemplate>
+                    </controls:AutoCompleteBox.ItemTemplate>
+                </controls:AutoCompleteBox>
                 <DatePicker Name="StartDatePicker" SelectedDate="{Binding DateDebut, UpdateSourceTrigger=PropertyChanged}"/>
                 <DatePicker Name="EndDatePicker" SelectedDate="{Binding DateFin, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
