--- a/Irydae/Ressources/StyleDictionary.xaml
+++ b/Irydae/Ressources/StyleDictionary.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+                    xmlns:helpers="clr-namespace:Irydae.Helpers"
                     xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit">
 
     <RadialGradientBrush x:Key="BackgroundGradientTopBorderListBrush" GradientOrigin="0.5,1" RadiusY="1" Center="0.5,0.5" RadiusX="0.99">
@@ -31,6 +32,14 @@
     </Style>
 
     <Style x:Key="{x:Type controls:AutoCompleteBox}" TargetType="controls:AutoCompleteBox">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Width" Value="150"/>
+        <Setter Property="Height" Value="26"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+    </Style>
+
+    <Style x:Key="{x:Type helpers:MyAutoCompleteBox}" TargetType="helpers:MyAutoCompleteBox">
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="5"/>
         <Setter Property="Width" Value="150"/>
