--- a/Irydae/Views/YesNoCancelDialog.xaml
+++ b/Irydae/Views/YesNoCancelDialog.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:converters="clr-namespace:Irydae.Ressources"
         mc:Ignorable="d"
         ResizeMode="NoResize"
         ShowInTaskbar="False"
@@ -10,7 +11,8 @@
         WindowStartupLocation="CenterOwner"
         Title="YesNoCancelDialog" 
         Height="300" Width="300"
-        DataContextChanged="Window_DataContextChanged">
+        DataContextChanged="Window_DataContextChanged"
+        SourceInitialized="Window_SourceInitialized">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -21,9 +23,9 @@
         </Border>
 
         <StackPanel HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal">
-            <Button Click="YesButton_Click" Name="YesButton" IsDefault="True" Content="{Binding YesMessage}"/>
-            <Button Name="NoButton" Click="NoButton_Click" Content="{Binding NoMessage}" />
-            <Button Name="CancelButton" IsCancel="True" Click="CancelButton_Click" Content="{Binding CancelMessage}" />
+            <Button Click="YesButton_Click" Name="YesButton" IsDefault="True" Content="{Binding YesMessage}" Visibility="{Binding YesMessage, Converter={converters:NullToVisibilityConverter}}"/>
+            <Button Name="NoButton" Click="NoButton_Click" Content="{Binding NoMessage}" Visibility="{Binding NoMessage, Converter={converters:NullToVisibilityConverter}}" />
+            <Button Name="CancelButton" IsCancel="True" Click="CancelButton_Click" Content="{Binding CancelMessage}" Visibility="{Binding CancelMessage, Converter={converters:NullToVisibilityConverter}}" />
         </StackPanel>
     </Grid>
 </Window>
