--- a/Irydae/Views/RelationsUserControl.xaml
+++ b/Irydae/Views/RelationsUserControl.xaml
@@ -3,9 +3,65 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:ressources="clr-namespace:Irydae.Ressources"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Border Padding="15" BorderBrush="Black" BorderThickness="0 0 1 0">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="48"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                    <Button Margin="5, 0">Ajouter une relation</Button>
+                </StackPanel>
+                <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+                    <StackPanel Orientation="Vertical">
+                        <ListBox Style="{StaticResource BaseListBox}" ItemsSource="{Binding PersonnageInfo.Personnage.Relations}" SelectedItem="{Binding PersonnageInfo.SelectedRelation}" DisplayMemberPath="Nom"/>
+                        <Grid Visibility="{Binding PersonnageInfo.SelectedRelation, Converter={ressources:NullToVisibilityConverter}}">
+                            <GroupBox Margin="5" Padding="5">
+                                <GroupBox.Header>Description</GroupBox.Header>
+                                <TextBox Height="310" Text="{Binding PersonnageInfo.SelectedRelation.Description}"/>
+                            </GroupBox>
+                        </Grid>
+                    </StackPanel>
+                </ScrollViewer>
+                <Border Grid.Row="2" BorderBrush="Black" Margin="0 10 0 0" BorderThickness="0 1 0 0">
+                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" VerticalAlignment="Top">
+                        <StackPanel.Resources>
+                            <Style TargetType="Button">
+                                <Setter Property="Margin" Value="5"/>
+                                <Setter Property="Padding" Value="5"/>
+                                <Setter Property="Height" Value="36"/>
+                            </Style>
+                        </StackPanel.Resources>
+                        <Button Command="{Binding SaveDataCommand}">Sauver</Button>
+                        <Button Command="{Binding GenerateHtmlCommand}">Prévisualiser</Button>
+                        <Button Command="{Binding DisplayResultCommand}">Afficher le code</Button>
+                    </StackPanel>
+                </Border>
+            </Grid>
+        </Border>
+        <ScrollViewer Grid.Column="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+            </Grid>
+        </ScrollViewer>
     </Grid>
 </UserControl>
