--- a/Irydae/Views/OptionDialog.xaml
+++ b/Irydae/Views/OptionDialog.xaml
@@ -5,64 +5,80 @@
         xmlns:ressources="clr-namespace:Irydae.Ressources"
         Title="Options" 
         SizeToContent="WidthAndHeight"
-        WindowStartupLocation="CenterOwner">
+        WindowStartupLocation="CenterOwner"
+        MinHeight="400"
+        MinWidth="550">
     <Border Padding="10">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Vertical" VerticalAlignment="Center">
-                <Label HorizontalContentAlignment="Right" Content="Afficher un seul point pour tous les rps dans le même lieu :"/>
-                <Label HorizontalContentAlignment="Right" Content="Taille des points :"/>
-                <Label HorizontalContentAlignment="Right" Content="Arrondi des points :"/>
-                <Label HorizontalContentAlignment="Right" Content="Rotation des points :"/>
-                <Label HorizontalContentAlignment="Right" Content="Couleur de remplissage du point :"/>
-                <Label HorizontalContentAlignment="Right" Content="Couleur de la bordure du point :"/>
-                <Label HorizontalContentAlignment="Right" Content="Couleur des liens entre les points :"/>
-            </StackPanel>
-            <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center">
-                <CheckBox IsChecked="{Binding Options.DisplayByYear}" />
-                <xctk:IntegerUpDown Value="{Binding Options.CircleWidth}" />
-                <Slider Maximum="50" Value="{Binding Options.BorderRadius}"/>
-                <Slider Maximum="45" Value="{Binding Options.BorderRotation}"/>
-                <xctk:ColorPicker ColorMode="ColorCanvas" SelectedColor="{Binding Options.CircleColor}" />
-                <xctk:ColorPicker ColorMode="ColorCanvas" SelectedColor="{Binding Options.BorderColor}" />
-                <xctk:ColorPicker ColorMode="ColorCanvas" SelectedColor="{Binding Options.LinkColor}" />
-            </StackPanel>
-            <Border Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Padding="5">
-                <Border HorizontalAlignment="Center" DockPanel.Dock="Left" BorderThickness="2" 
+            <TabControl>
+                <TabItem Header="Journal">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+                            <Label HorizontalContentAlignment="Right" Content="Afficher un seul point pour tous les rps dans le même lieu :"/>
+                            <Label HorizontalContentAlignment="Right" Content="Taille des points :"/>
+                            <Label HorizontalContentAlignment="Right" Content="Arrondi des points :"/>
+                            <Label HorizontalContentAlignment="Right" Content="Rotation des points :"/>
+                            <Label HorizontalContentAlignment="Right" Content="Couleur de remplissage du point :"/>
+                            <Label HorizontalContentAlignment="Right" Content="Couleur de la bordure du point :"/>
+                            <Label HorizontalContentAlignment="Right" Content="Couleur des liens entre les points :"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center">
+                            <CheckBox IsChecked="{Binding Options.DisplayByYear}" />
+                            <xctk:IntegerUpDown Value="{Binding Options.CircleWidth}" />
+                            <Slider Maximum="50" Value="{Binding Options.BorderRadius}"/>
+                            <Slider Maximum="45" Value="{Binding Options.BorderRotation}"/>
+                            <xctk:ColorPicker ColorMode="ColorCanvas" SelectedColor="{Binding Options.CircleColor}" />
+                            <xctk:ColorPicker ColorMode="ColorCanvas" SelectedColor="{Binding Options.BorderColor}" />
+                            <xctk:ColorPicker ColorMode="ColorCanvas" SelectedColor="{Binding Options.LinkColor}" />
+                        </StackPanel>
+                        <Border Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Padding="5">
+                            <Border HorizontalAlignment="Center" DockPanel.Dock="Left" BorderThickness="2" 
                         Background="{Binding Options.CircleColor, Converter={ressources:ColorToBrushConverter}}" 
                         BorderBrush="{Binding Options.BorderColor, Converter={ressources:ColorToBrushConverter}}" 
                         Width="{Binding Options.CircleWidth}" 
                         Height="{Binding Options.CircleWidth}" RenderTransformOrigin=".5,.5">
-                    <Border.Style>
-                        <Style TargetType="Border">
-                            <Style.Setters>
-                                <Setter Property="CornerRadius">
-                                    <Setter.Value>
-                                        <MultiBinding Converter="{ressources:PercentWidthCornerRadiusConverter}">
-                                            <Binding Path="Options.CircleWidth"/>
-                                            <Binding Path="Options.BorderRadius"/>
-                                        </MultiBinding>
-                                    </Setter.Value>
-                                </Setter>
-                                <Setter Property="RenderTransform">
-                                    <Setter.Value>
-                                        <RotateTransform Angle="{Binding Options.BorderRotation}"/>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style.Setters>
-                        </Style>
-                    </Border.Style>
-                </Border>
-            </Border>
-            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Grid.Row="2" Orientation="Horizontal">
+                                <Border.Style>
+                                    <Style TargetType="Border">
+                                        <Style.Setters>
+                                            <Setter Property="CornerRadius">
+                                                <Setter.Value>
+                                                    <MultiBinding Converter="{ressources:PercentWidthCornerRadiusConverter}">
+                                                        <Binding Path="Options.CircleWidth"/>
+                                                        <Binding Path="Options.BorderRadius"/>
+                                                    </MultiBinding>
+                                                </Setter.Value>
+                                            </Setter>
+                                            <Setter Property="RenderTransform">
+                                                <Setter.Value>
+                                                    <RotateTransform Angle="{Binding Options.BorderRotation}"/>
+                                                </Setter.Value>
+                                            </Setter>
+                                        </Style.Setters>
+                                    </Style>
+                                </Border.Style>
+                            </Border>
+                        </Border>
+                        
+                    </Grid>
+                </TabItem>
+                <TabItem Header="Relations">
+                    <ItemsControl ItemsSource="{Binding Options.TypesRelation}" DisplayMemberPath="Nom"/>
+                </TabItem>
+            </TabControl>
+            <StackPanel HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal">
                 <Button Name="CancelButton" IsCancel="True">Annuler</Button>
                 <Button Name="ResetButton" Command="{Binding ResetCommand}">Rétablir les valeurs par défaut</Button>
                 <Button Name="AddButton" IsDefault="True" Click="AddButton_OnClick">OK</Button>
