--- a/Irydae/Views/OptionDialog.xaml
+++ b/Irydae/Views/OptionDialog.xaml
@@ -29,7 +29,7 @@
                         <StackPanel Orientation="Vertical" VerticalAlignment="Center">
                             <Label HorizontalContentAlignment="Right" Content="Lien vers l'avatar :"/>
                         </StackPanel>
-                        <StackPanel Orientation="Vertical" Grid.Column="1" VerticalAlignment="Center">
+                        <StackPanel Grid.Row="0"  Orientation="Vertical" Grid.Column="1" VerticalAlignment="Center">
                             <TextBox Text="{Binding Options.AvatarUrl}"/>
                         </StackPanel>
                         <Border Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Padding="5" HorizontalAlignment="Stretch">
